# axen-treesitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-axenlang.pc.in
bindings/c/tree_sitter/: tree-sitter-axenlang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_axenlang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAxenlangTests/: TreeSitterAxenlangTests.swift
queries/: highlights.scm
queries/axenlang/: highlights.scm
src/: grammar.json  node-types.json  parser.c
